Deploys/Projects/avp-example/kustomize/base-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.cloudnative.love #it will be dev-app.devopscons.com
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 80
            pathType: ImplementationSpecific
